# gm-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  api.py  cli.py  pyproject.toml  wsgi.py
docs/: BACKENDS.md  DEPLOYMENT.md  MULTI_SYSTEM_RFC.md
gm_agent/: __init__.py  agent.py  celery_app.py  chat.py  config.py  context.py  event_queue.py  game_loop.py  mcp_tasks.py  propagation.py  replay.py  rumor_mill.py  summarizer.py  tasks.py
gm_agent/mcp/: __init__.py  base.py  campaign_state.py  character_runner.py  client.py  creature_modifier.py  dice.py  encounter.py  foundry_bridge_base.py  foundry_polling.py  foundry_vtt.py  notes.py  npc_builder.py  npc_knowledge.py  pf2e_rag.py  redis_notes.py  registry.py  rumors.py  subsystem.py
gm_agent/models/: __init__.py  anthropic.py  base.py  factory.py  (+2 more)
infrastructure/: .env.docker  Dockerfile  docker-compose.override.yml  docker-compose.yml
tests/: __init__.py  conftest.py  test_agent.py  test_anthropic_backend.py  test_ap_progress.py  test_api.py  test_async_automation.py  test_automation_integration.py  test_backend_factory.py  test_campaign_state.py  test_character_runner.py  test_chat.py  test_cli.py  test_context.py  test_creature_modifier.py  test_crunch.py  test_dialogue.py  test_dice.py  test_encounter.py  test_event_queue.py  test_factions.py  test_foundry_vtt.py  test_game_loop.py  test_history.py  test_integration_real.py  test_knowledge.py  test_locations.py  test_mcp.py  test_notes.py  test_npc_builder.py  test_ollama.py  test_openai_backend.py  test_phase0.py  test_prep.py  test_propagation.py  test_relationships.py  test_replay.py  test_rumors.py  test_schemas.py  test_secrets.py  (+5 more)
(+27 files in other folders)
